fix(_vars.scss): change container offset for better visibility

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -17,7 +17,7 @@
   --content-big: 187rem;
   --content-med: 180.5rem;
   --content-sm: 169.6rem;
-  --container-offset: 1rem;
+  --container-offset: 1.5rem;
   --container-big: calc(var(--content-big) + (var(--container-offset) * 2));
   --container-med: calc(var(--content-med) + (var(--container-offset) * 2));
   --container-sm: calc(var(--content-sm) + (var(--container-offset) * 2));
